--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Medion</title>
+  <title>ChemTracker</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -63,7 +63,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="">
             <span>
-              Medion
+              ChemTracker
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -139,9 +139,11 @@
 
                     </h1>
                     <p>
-                      There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                      alteration in some form, by injected humour, or randomised words which don't look even slightly
-                      believable.
+                      At ChemTracker, our aim is to provide for you and your family all your medical needs. 
+                      We are proud to be a part of the local community, bringing high-quality medical services to people.
+                      We aim to give you, as a patient, the time and respect that you deserve and need.
+                      For further information about us and on the services we provide, please use the navigation bar at the top of this page,
+                      just give us a call on the number above and we would be more than happy to give you any information you may need.
                     </p>
                     <div>
                       <a href="">
